build_errors.txt

> Task :compileJava FAILED
C:\Users\david\dev\robotics\ftc\ARESLib2\src\main\java\org\areslib\hardware\wrappers\DcMotorExWrapper.java:11: error: org.areslib.hardware.wrappers.DcMotorExWrapper is not abstract and does not override abstract method setDistancePerPulse(double) in org.areslib.hardware.sensors.AresEncoder
public class DcMotorExWrapper implements AresMotor, AresEncoder {
       ^
C:\Users\david\dev\robotics\ftc\ARESLib2\src\main\java\org\areslib\hardware\wrappers\AnalogAbsoluteEncoderWrapper.java:6: error: org.areslib.hardware.wrappers.AnalogAbsoluteEncoderWrapper is not abstract and does not override abstract method setOffset(double) in org.areslib.hardware.sensors.AresAbsoluteEncoder
public class AnalogAbsoluteEncoderWrapper implements AresAbsoluteEncoder {
       ^
C:\Users\david\dev\robotics\ftc\ARESLib2\src\main\java\org\areslib\hardware\wrappers\AnalogAbsoluteEncoderWrapper.java:20: error: method does not override or implement a method from a supertype
    @Override
    ^
C:\Users\david\dev\robotics\ftc\ARESLib2\src\main\java\org\areslib\hardware\wrappers\OctoQuadEncoderWrapper.java:10: error: org.areslib.hardware.wrappers.OctoQuadEncoderWrapper is not abstract and does not override abstract method setDistancePerPulse(double) in org.areslib.hardware.sensors.AresEncoder
public class OctoQuadEncoderWrapper implements AresEncoder {
       ^
C:\Users\david\dev\robotics\ftc\ARESLib2\src\main\java\org\areslib\hardware\wrappers\RevEncoderWrapper.java:12: error: org.areslib.hardware.wrappers.RevEncoderWrapper is not abstract and does not override abstract method getAbsolutePositionRad() in org.areslib.hardware.sensors.AresAbsoluteEncoder
public class RevEncoderWrapper implements AresAbsoluteEncoder {
       ^
C:\Users\david\dev\robotics\ftc\ARESLib2\src\main\java\org\areslib\hardware\wrappers\RevEncoderWrapper.java:62: error: method does not override or implement a method from a supertype
    @Override
    ^
C:\Users\david\dev\robotics\ftc\ARESLib2\src\main\java\org\areslib\hardware\wrappers\SrsHubEncoderWrapper.java:10: error: org.areslib.hardware.wrappers.SrsHubEncoderWrapper is not abstract and does not override abstract method setDistancePerPulse(double) in org.areslib.hardware.sensors.AresEncoder
public class SrsHubEncoderWrapper implements AresEncoder {
       ^
C:\Users\david\dev\robotics\ftc\ARESLib2\src\main\java\org\areslib\RobotAresOpMode.java:30: error: <anonymous org.areslib.RobotAresOpMode$2> is not abstract and does not override abstract method setDistancePerPulse(double) in org.areslib.hardware.sensors.AresEncoder
        AresEncoder placeholderEncoder = new AresEncoder() {
                                                           ^
8 errors

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':compileJava'.
> Compilation failed; see the compiler error output for details.

* Try:
> Run with --info option to get more log output.
> Run with --scan to get full insights.

BUILD FAILED in 1s
1 actionable task: 1 executed
